--- a/core/site.admin/WebContent/WEB-INF/web.xml
+++ b/core/site.admin/WebContent/WEB-INF/web.xml
@@ -3,16 +3,22 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	version="3.1">
 	
+	
+	
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-			classpath:config/*.xml
+			classpath:config/root-context.xml
 		</param-value>
 	</context-param>
+
+
 
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	
+	
 	
 	<filter>
 		<filter-name>encodingFilter</filter-name>
@@ -35,14 +41,16 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		<dispatcher>ERROR</dispatcher>
 	</filter-mapping>
 
+
+
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
 			<param-value>
-				/WEB-INF/_config/*.xml
-				/WEB-INF/_config/*/*.xml
+				classpath:config/app/servlet-context.xml
+				classpath:config/app/*/*.xml
 			</param-value>
 		</init-param>
 		<init-param>
@@ -57,8 +65,11 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	
+	
+	
 	<session-config>
 		<session-timeout>30</session-timeout>
 	</session-config>	
+	
 	
 </web-app>
