--- a/core/pom.xml
+++ b/core/pom.xml
@@ -140,7 +140,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 		<dependency>
 			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>6.0.13.Final</version>
+			<version>6.1.0.Final</version>
 		</dependency>
 		
 		
@@ -148,7 +148,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.9.9</version>
+			<version>2.10.0</version>
 		</dependency>
 		
 		
@@ -231,7 +231,26 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 		</dependency>
 		
 		
-				
+
+		
+		<!-- 엑셀 파일 읽기
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.17</version>
+		</dependency>-->
+
+
+		<!-- 파일 타입 확인
+		<dependency>
+			<groupId>com.j256.simplemagic</groupId>
+			<artifactId>simplemagic</artifactId>
+			<version>1.12</version>
+		</dependency>
+		-->
+		
+		
+						
 		<!-- servlet -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -299,7 +318,8 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 	
 	
 	<modules>
+		<module>site.common</module>
+		<module>site.admin</module>		
 		<module>site</module>
-		<module>site.admin</module>
 	</modules>
 </project>
