--- a/core/site.common/pom.xml
+++ b/core/site.common/pom.xml
@@ -13,17 +13,38 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 		<relativePath>../pom.xml</relativePath>
 	</parent>
   
+	<groupId>ex.ecommerce.common</groupId>
 	<artifactId>site.common</artifactId>
 
 
-
-	<dependencies>
-	</dependencies>
-  
-  
   
 	<build>
 		<finalName>site.common</finalName>
+		
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<overlays>
+						<overlay>
+							<groupId>ex.ecommerce.common</groupId>
+							<artifactId>site.common</artifactId>
+						</overlay>
+					</overlays>
+					
+					<warSourceDirectory>${project.basedir}/WebContent</warSourceDirectory>
+				</configuration>
+			</plugin>
+		</plugins>
+		
+		<sourceDirectory>src/main/java</sourceDirectory>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
 	</build>
   	
   	
