--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,22 +4,32 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   
   
+  
 	<modelVersion>4.0.0</modelVersion>
+	
 	<groupId>ex.ecommerce</groupId>
 	<artifactId>core</artifactId>
 	<packaging>pom</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 
 
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		
 		<java-version>1.8</java-version>
 
 		<slf4j-version>1.7.25</slf4j-version>
 		<aspectj-version>1.8.13</aspectj-version>
-		<tiles.version>3.0.0</tiles.version>
+		<tiles-version>3.0.0</tiles-version>
 	</properties>
+
+
+
+	<repositories>
+	</repositories>
+
 
 
 	<dependencyManagement>
@@ -95,7 +105,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 		<dependency>
 			<groupId>org.codehaus.janino</groupId>
 			<artifactId>janino</artifactId>
-			<version>2.7.8</version>
+			<version>3.0.15</version>
 		</dependency>
 		
 
@@ -158,7 +168,16 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 			<artifactId>bcrypt</artifactId>
 			<version>0.6.0</version>
 		</dependency>
+
+
 		
+		<!-- properties 암호화 -->
+		<dependency>
+			<groupId>org.jasypt</groupId>
+			<artifactId>jasypt</artifactId>
+			<version>1.9.2</version>
+		</dependency>
+				
 
 
 		<!-- db-->	
@@ -207,31 +226,18 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.4</version>
 		</dependency>  
-		
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-compress</artifactId>
+			<version>1.8.1</version>
+		</dependency>
+				
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
 			<version>3.17</version>
 		</dependency>
-		
-				
-		
-		<dependency>
-			<groupId>org.imgscalr</groupId>
-			<artifactId>imgscalr-lib</artifactId>
-			<version>4.2</version>
-		</dependency>
-		
-		
-		
-		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>mail</artifactId>
-			<version>1.4.4</version>
-		</dependency>
-		
-		
-
 		
 		<!-- 엑셀 파일 읽기
 		<dependency>
@@ -248,6 +254,22 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 			<version>1.12</version>
 		</dependency>
 		-->
+		
+			
+		
+		<dependency>
+			<groupId>org.imgscalr</groupId>
+			<artifactId>imgscalr-lib</artifactId>
+			<version>4.2</version>
+		</dependency>
+		
+		
+		
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.4</version>
+		</dependency>
 		
 		
 						
@@ -277,27 +299,22 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 		<dependency>
 			<groupId>org.apache.tiles</groupId>
 			<artifactId>tiles-core</artifactId>
-			<version>${tiles.version}</version>
+			<version>${tiles-version}</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.apache.tiles</groupId>
 			<artifactId>tiles-servlet</artifactId>
-			<version>${tiles.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>commons-digester</groupId>
-					<artifactId>commons-digester</artifactId>
-				</exclusion>
-			</exclusions>
+			<version>${tiles-version}</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.apache.tiles</groupId>
 			<artifactId>tiles-jsp</artifactId>
-			<version>${tiles.version}</version>
+			<version>${tiles-version}</version>
 		</dependency>		
 	</dependencies>
+	
 	
 	
 	<build>
@@ -313,8 +330,19 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 					<target>${java-version}</target>
 				</configuration>
 			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9.1</version>
+				<configuration>
+					<locale>ko_kr</locale>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
+	
 	
 	
 	<modules>
@@ -322,4 +350,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 		<module>site.admin</module>		
 		<module>site</module>
 	</modules>
+	
+	
+	
 </project>
