--- a/core/site.admin/pom.xml
+++ b/core/site.admin/pom.xml
@@ -1,30 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  
-  	
-	
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
+
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
 		<groupId>ex.ecommerce</groupId>
 		<artifactId>core</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
-  
+
 	<artifactId>site.admin</artifactId>
 
 
 
 	<dependencies>
+
+		<!-- common
+		<dependency>
+			<groupId>ex.ecommerce.common</groupId>
+			<artifactId>site.common</artifactId>
+			<version>${project.version}</version>
+		</dependency>-->
+
+
+
+		<!-- redis -->
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.10.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-redis</artifactId>
+			<version>2.1.0.RELEASE</version>
+		</dependency>
+
 	</dependencies>
-  
-  
-  
+
+
+
 	<build>
 		<finalName>site.admin</finalName>
 	</build>
-  	
+
+
+
 </project>
