--- a/core/site/pom.xml
+++ b/core/site/pom.xml
@@ -4,6 +4,7 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   
 
+
 	<modelVersion>4.0.0</modelVersion>
 	
 	<parent>
@@ -18,6 +19,14 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 
 
 	<dependencies>
+	
+		<!-- 소셜 로그인 -->
+		<dependency>
+			<groupId>com.github.scribejava</groupId>
+			<artifactId>scribejava-core</artifactId>
+			<version>5.5.0</version>
+		</dependency>
+		
 	</dependencies>
   
   
