--- a/core/site/WebContent/WEB-INF/web.xml
+++ b/core/site/WebContent/WEB-INF/web.xml
@@ -9,10 +9,9 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
 			classpath:config/*.xml
+			classpath:config/**/*.xml
 		</param-value>
 	</context-param>
-
-
 
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -50,7 +49,6 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 			<param-name>contextConfigLocation</param-name>
 			<param-value>
 				classpath:config/app/*.xml
-				classpath:config/app/*/*.xml
 			</param-value>
 		</init-param>
 		<init-param>
