--- a/core/pom.xml
+++ b/core/pom.xml
@@ -152,7 +152,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
-			<version>2.3.0</version>
+			<version>2.3.2</version>
 		</dependency>
 		
 		
@@ -249,24 +249,23 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 			<version>3.17</version>
 		</dependency>
 		
-		<!-- 엑셀 파일 읽기
+		<!-- 엑셀 파일 읽기 -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
 			<version>3.17</version>
-		</dependency>-->
+		</dependency>
 
 
-		<!-- 파일 타입 확인
+		<!-- 파일 타입 확인	-->
 		<dependency>
 			<groupId>com.j256.simplemagic</groupId>
 			<artifactId>simplemagic</artifactId>
 			<version>1.12</version>
 		</dependency>
-		-->
+		
 		
 			
-		
 		<dependency>
 			<groupId>org.imgscalr</groupId>
 			<artifactId>imgscalr-lib</artifactId>
@@ -356,8 +355,8 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 					<encoding>UTF-8 </encoding>
 				</configuration>
 			</plugin>
-			-->
 			
+	
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
@@ -366,7 +365,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 					<locale>ko_kr</locale>
 					<encoding>UTF-8</encoding>
 				</configuration>
-			</plugin>
+			</plugin>-->
 		</plugins>
 	</build>
 	
